Full Course/Module6/ingress/appgw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: super-api-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true" 
spec:
  tls:
  - hosts:
    - app.20.126.176.95.nip.io
    secretName: my-tls-secret
  rules:
  - host: app.20.126.176.95.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: superapi
            port:
              number: 80
